# betterstack-report-tool

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
